--- a/ResponsividadeJhenifer/alura-books-aula20/index.html
+++ b/ResponsividadeJhenifer/alura-books-aula20/index.html
@@ -39,7 +39,7 @@
           <a href="#" class="lista-menu__link">Documentário</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      <img src="img/Logo.svg" alt="Logo da CineMagic" class="container__imagem">
       <h1 class="container__titulo"><b class="container__titulo--negrito">Cine</b>Magic</h1>
 
       <ul class="opções">
@@ -83,7 +83,7 @@
   <section class="banner">
     <h2 class="banner__titulo">Já está em mente qual será o próximo para assistir?</h2>
     <p class="banner__texto">O encanto do cinema em cada filme!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <input type="search" class="banner__pesquisa" placeholder="Encontre os filmes desejados">
   </section>
 
   <section class="carrossel">
@@ -97,17 +97,17 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
+          <div class="swiper-slide"><img src="/home/escola/Downloads/terror.jpg"
               alt="Filmes de terror e suspense"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
+          <div class="swiper-slide"><img src="/home/escola/Downloads/lágrimas.jpeg"
               alt="Filmes de fantasia e romantasia "></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Filmes de romance">
+          <div class="swiper-slide"><img src="/home/escola/Downloads/moda.jpeg" alt="Filmes de romance">
           </div>
           <div class="swiper-slide">
-            <img src="img/Guia Front-end.svg" alt="Filmes de comédia" />
+            <img src="/home/escola/Downloads/queda.jpeg" alt="Filmes de comédia" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Portugol.svg" alt="Filmes de documentário" />
+            <img src="/home/escola/Downloads/anna.jpeg" alt="Filmes de documentário" />
           </div>
 
 
@@ -126,7 +126,7 @@
               Os famosos demonologistas Lorraine e Ed Warren viajam até o norte de Londres. Lá, eles ajudam uma mãe solteira que cria quatro filhos sozinha em uma casa atormentada por espíritos malignos.
             </p>
           </div>
-          <img src="C:\Users\CECS06\Downloads\The_Conjuring_2.jpeg" class="descrição__imagem" />
+          <img src="" class="descrição__imagem" />
         </div>
         <div class="card__botões">
           <ul class="botões">
@@ -153,14 +153,14 @@
 
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
+          <div class="swiper-slide"><img src="/home/escola/Downloads/pianista.jpeg"
               alt="Godzilla e Kong: O novo império"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg" alt="Oppenheimer">
+          <div class="swiper-slide"><img src="/home/escola/Downloads/bruxa.jpeg" alt="Oppenheimer">
           </div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="mad Max: Estrada da Fúria">
+          <div class="swiper-slide"><img src="/home/escola/Downloads/casa.jpeg" alt="mad Max: Estrada da Fúria">
           </div>
-          <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Duna"></div>
-          <div class="swiper-slide"><img src="img/Portugol.svg" alt="Duna: Parte 2"></div>
+          <div class="swiper-slide"><img src="/home/escola/Downloads/donzela.jpeg" alt="Duna"></div>
+          <div class="swiper-slide"><img src="/home/escola/Downloads/jurassic.jpeg" alt="Duna: Parte 2"></div>
         </div>
 
         <!-- If we need navigation buttons -->
